[fix] make list collapsable on inner-child click

--- a/TutangleRes/assets/css/layout.css
+++ b/TutangleRes/assets/css/layout.css
@@ -360,9 +360,7 @@ body {
   .burger-icon {
     display: inline;
   }
-}
 
-@media only screen and (min-width: 800px) {
   .hidden-menu {
     display: none;
   }
