--- a/TutangleRes/assets/css/style.css
+++ b/TutangleRes/assets/css/style.css
@@ -165,6 +165,7 @@ submit {
 
 .list-section__header-touch span {
   font-size: 15px;
+  pointer-events: none;
 }
 
 @media only screen and (max-width: 800px) {
